--- a/src/app/cart/cart.component.scss
+++ b/src/app/cart/cart.component.scss
@@ -1,7 +1,7 @@
 .cart-list {
     padding: 0;
     list-style: none;
-    height: 100%;
+    height:80%;
 
     &-wrapper {
         display: flex;
@@ -9,23 +9,27 @@
         align-items: start;
         padding: 10px;
         border-bottom: 1px solid #ccc;
-        height: 100%;
+        height: 70%;
     }
 
     &-item {
-      height: 150px;
-      display: flex;
+        display: flex;
 
-  
-      &-image {
-        width: 100px;
-        height: 100px;
-      }
-  
-      &-controls {
-        
+        h3 {
+            margin-bottom: 0;
+        }
 
-      }
-
+        &-content {
+            &>span {
+                margin-right: 10px;
+            }
+        }
     }
-  }
+}
+
+.checkout-footer {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 10px 0 10px;
+}
